--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -48,7 +48,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
-                    <mainClass>petclinic.PetclinicApplication</mainClass>
+                    <mainClass>PetclinicApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
